[package]
  edition = "2021"
  name = "princemuel"
  publish = false
  version = "0.1.0"

[dependencies]
  dotenv = "0.15.0"
  isbot = "0.1.3"
  octocrab = "0.38.0"
  resend-rs = "0.6.0"
  serde = { version = "1", features = ["derive"] }
  serde_derive = "1"
  serde_json = { version = "1", features = ["raw_value"] }
  tokio = { version = "1", features = ["full"] }
  uuid = { version = "1", features = ["fast-rng", "macro-diagnostics", "v4"] }
  vercel_runtime = { version = "1" }
  wasm-bindgen = "0.2.92"

[lib]
  name = "package"
  path = "src/lib.rs"

[[bin]]
  name = "hello"
  path = "api/hello.json.rs"

[[bin]]
  name = "github"
  path = "api/github.json.rs"

[[bin]]
  name = "subscribe"
  path = "api/subscribe.rs"
