[package]
  edition = "2021"
  name = "princemuel"
  publish = false
  version = "0.1.0"

[dependencies]
  dotenv = "0.15.0"
  isbot = "0.1.3"
  lazy-regex = "3.2.0"
  once_cell = "1.19.0"
  prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "migrations",
    "postgresql",
  ] }
  prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "migrations",
    "postgresql",
  ] }
  reqwest = { version = "0.12", features = ["json"] }
  serde = { version = "1", features = ["derive"] }
  serde_derive = "1"
  serde_json = { version = "1", features = ["raw_value"] }
  tokio = { version = "1", features = ["full"] }
  uuid = { version = "1", features = ["fast-rng", "macro-diagnostics", "v4"] }
  vercel_runtime = { version = "1" }

[lib]
  name = "package"
  path = "lib/lib.rs"

[[bin]]
  name = "health"
  path = "api/health.json.rs"

[[bin]]
  name = "analytics"
  path = "api/analytics.rs"

[[bin]]
  name = "prisma_cli"
  path = "prisma_cli/src/main.rs"
