[package]
  edition = "2021"
  name    = "princemuel"
  publish = false
  version = "0.1.0"

[dependencies]
  http         = "1.1.0"
  serde        = { version = "1", features = ["derive"] }
  serde_derive = "1"
  serde_json   = { version = "1", features = ["raw_value"] }
  tokio        = { version = "1", features = ["macros"] }
  # Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
  vercel_runtime = { version = "1" }
wasm-tools = "1.219.1"

# You can specify a library for shared logic here (optional)
[lib]
  path = "source/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
  name = "health"
  path = "api/health.rs"


  # Note that you need to provide unique names for each binary:
  # [[bin]]
  # name = "user-id"
  # path = "api/user/[id].rs"
  #
  # [[bin]]
  # name = "group-id"
  # path = "api/group/[id].rs"
